force-app/main/default/objects/Assessment__c/fields/Additional_Requests__c.field-meta.xml
<CustomField>
    <fullName>Additional_Requests__c</fullName>
    <label>Additional Requests</label>
    <length>255</length>
    <type>Text</type>
</CustomField>