force-app/main/default/objects/Assessment__c/fields/Assessment_Template__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment Template</label>
    <referenceTo>Assessment_Template__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>