force-app/main/default/objects/Assessment__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ESG</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>REACH</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>