force-app/main/default/objects/Assessment__c/fields/CreatedUser__c.field-meta.xml
<CustomField>
    <fullName>CreatedUser__c</fullName>
    <formula>CreatedBy.LastName +  CreatedBy.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Record created User Name</inlineHelpText>
    <label>CreatedUser</label>
    <type>Text</type>
</CustomField>