force-app/main/default/objects/Assessment__c/fields/Customer_Review__c.field-meta.xml
<CustomField>
    <fullName>Customer_Review__c</fullName>
    <label>Customer Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Completed Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>