force-app/main/default/objects/Assessment__c/fields/Disclosure__c.field-meta.xml
<CustomField>
    <fullName>Disclosure__c</fullName>
    <label>Disclosure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>