force-app/main/default/objects/Assessment__c/fields/Expiry_Reminder_Before_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Reminder_Before_in_Days__c</fullName>
    <label>Expiry Reminder Before (in Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>