force-app/main/default/objects/Assessment__c/fields/Expiry_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Reminder_Date__c</fullName>
    <formula>IF(NOT(ISBLANK(End_Date__c)), End_Date__c- Expiry_Reminder_Before_in_Days__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date Reminder on</label>
    <type>Date</type>
</CustomField>