force-app/main/default/objects/Assessment__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <defaultValue>&quot;One Time&quot;</defaultValue>
    <label>Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Time</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
                <isActive>false</isActive>
                <label>Annual</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
                <isActive>false</isActive>
                <label>Quarterly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>