force-app/main/default/objects/Assessment__c/fields/Incomplete_Responses__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Responses__c</fullName>
    <label># of Responses Not Started</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>