force-app/main/default/objects/Assessment__c/fields/Is_Past_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Is_Past_Assessment__c</fullName>
    <formula>IF( Start_Date__c &lt;  TODAY() , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Past Assessment</label>
    <type>Checkbox</type>
</CustomField>