force-app/main/default/objects/Assessment__c/fields/Number_of_Incomplete_Responses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Incomplete_Responses__c</fullName>
    <label># Incomplete Responses</label>
    <summaryFilterItems>
        <field>AccountAssessmentRelation__c.Status__c</field>
        <operation>equals</operation>
        <value>In progress</value>
    </summaryFilterItems>
    <summaryForeignKey>AccountAssessmentRelation__c.Assessment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>