force-app/main/default/objects/Assessment__c/fields/Number_of_invited_Suppliers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_invited_Suppliers__c</fullName>
    <label># of Invited Suppliers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>