force-app/main/default/objects/Assessment__c/fields/Number_of_Responded_Suppliers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Responded_Suppliers__c</fullName>
    <label># Responded Suppliers</label>
    <summaryFilterItems>
        <field>AccountAssessmentRelation__c.Status__c</field>
        <operation>equals</operation>
        <value>Submitted, In review, Accepted</value>
    </summaryFilterItems>
    <summaryForeignKey>AccountAssessmentRelation__c.Assessment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>