force-app/main/default/objects/Assessment__c/fields/Number_of_Responses_Not_Started__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Responses_Not_Started__c</fullName>
    <label># of Responses Not Started</label>
    <summaryFilterItems>
        <field>AccountAssessmentRelation__c.Status__c</field>
        <operation>equals</operation>
        <value>Not Started</value>
    </summaryFilterItems>
    <summaryForeignKey>AccountAssessmentRelation__c.Assessment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>