force-app/main/default/objects/Assessment__c/fields/Number_of_Suppliers_responded_back__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Suppliers_responded_back__c</fullName>
    <label># Responded Suppliers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>