force-app/main/default/objects/Assessment__c/fields/Project_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Project_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Assignment</label>
    <referenceTo>Project_Assignment__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>