force-app/main/default/objects/Assessment__c/fields/Responses_Incomplete__c.field-meta.xml
<CustomField>
    <fullName>Responses_Incomplete__c</fullName>
    <label># of Responses In Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>