force-app/main/default/objects/Assessment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Review Completed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
                <isActive>false</isActive>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Open</fullName>
                <isActive>false</isActive>
                <label>Open</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>