force-app/main/default/objects/Assessment__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template Name</label>
    <referenceTo>Assessment_Template__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>