force-app/main/default/objects/Assessment__c/validationRules/Restrict_Active_Assessment_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Active_Assessment_Update</fullName>
    <active>false</active>
    <errorConditionFormula>IF(Number_of_invited_Suppliers__c &gt; 0, true, false)</errorConditionFormula>
    <errorMessage>Assessment program in use, cannot be edited</errorMessage>
</ValidationRule>