force-app/main/default/objects/Assessment__c/validationRules/Restrict_end_date_Assessments2.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_end_date_Assessments2</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date of an Assessment Program cannot be before the Start Date</errorMessage>
</ValidationRule>