force-app/main/default/objects/Assessment__c/validationRules/Restrict_past_end_date_Assessments.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_past_end_date_Assessments</fullName>
    <active>false</active>
    <errorConditionFormula>End_Date__c &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be a past date</errorMessage>
</ValidationRule>