force-app/main/default/objects/Assessment__c/validationRules/Restrict_past_start_date_Assessments.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_past_start_date_Assessments</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start date cannot be a past date</errorMessage>
</ValidationRule>