force-app/main/default/objects/Assessment__c/validationRules/Restrict_Remainder_Update_Without_Enddat.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Remainder_Update_Without_Enddat</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK( End_Date__c ),ISCHANGED( Expiry_Reminder_Before_in_Days__c ))</errorConditionFormula>
    <errorMessage>Cannot set a Due Date Reminder without an End Date for the Assessment.</errorMessage>
</ValidationRule>