force-app/main/default/objects/Assessment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Template__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Frequency__c</columns>
    <columns>Status__c</columns>
    <columns>Number_of_invited_Suppliers__c</columns>
    <columns>Number_of_Suppliers_responded_back__c</columns>
    <columns>Responses_Incomplete__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>